[package]
name = "ayudame_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [profile.dev]
# rpath = true

[dependencies]
io_utils = { path = "../io_utils", package = "io_utils" }
utils = { path = "../utils", package = "utils" }
ayudame_core_rs = { git = "https://github.com/paddison/ayudame", package = "ayudame_core_rs", branch = "develop-rust" }
graph_generator = { git = "https://github.com/paddison/graph_generator.git" }
clap = { version = "4.3.19", features = ["derive"] }
